# direct_input_hook_test

./: .gitmodules  CMakeLists.txt  README.md
hook/: CMakeLists.txt  dllmain.cpp  hook.def  wrapped_directinput8.h  wrapped_directinputdevice8.h
hook_injector/: CMakeLists.txt  main.cpp
